@@ -59,6 +59,9 @@ New in version 6.0.5
 
 - new commands py-execute-buffer-dedicated, py-execute-buffer-switch  -dedicated
 
+- `toggle-py-smart-indentation' new command
+   also `py-smart-indentation-on', -off
+
 New in version 6.0.4
 --------------------
 
